--- a/OutliersAPP.SPA/src/app/playlist/playlist-with-video-view/playlist-with-video-view.component.css
+++ b/OutliersAPP.SPA/src/app/playlist/playlist-with-video-view/playlist-with-video-view.component.css
@@ -17,3 +17,19 @@ li {
 .mrright{
     margin-right: 90%;
 }
+.rating-list li {
+    float: right;
+    color: #ddd;
+    padding: 10px 5px;
+  
+  }
+  
+  .rating-list li:hover,
+  .rating-list li:hover ~ li {
+    color: #ffd700;
+  }
+  
+  .rating-list {
+    display: inline-block;
+    list-style: none;
+  }
