--- a/OutliersAPP.SPA/src/app/playlist/update-playlist/update-playlist.component.html
+++ b/OutliersAPP.SPA/src/app/playlist/update-playlist/update-playlist.component.html
@@ -14,7 +14,7 @@
 
       <div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate = "Enter Your Email (e@a.x)">
         <span class="pull-left"> <strong>playlist name </strong>  </span>
-        <input class="input100" type="text"   name="name" [(ngModel)]="playlist.Name">
+        <input class="input100" type="text"   name="name" [(ngModel)]="playlist.name">
 
       </div>
       <div  class="wrap-input100 validate-input bg0 rs1-alert-validate" data-validate = "Please Type Your Message">
