--- a/OutliersAPP.SPA/src/app/register/register.component.html
+++ b/OutliersAPP.SPA/src/app/register/register.component.html
@@ -139,6 +139,15 @@
           <input type="radio" name="radio3" id="paypal" value="Company" formControlName="roleName"><label
             class="paypal-label four col" for="paypal">Company</label>
         </section>
+        <section class="payment-type cf">
+          <h4 style="text-align: left;padding: 2%;">Select your Careerpath:</h4>
+          <input type="radio" name="radio2" id="p_credit" value="php" formControlName="careerpath"><label
+            class="p_credit-label four col" for="p_credit">PHP</label>
+          <input type="radio" name="radio2" id="p_debit" value=".net" formControlName="careerpath"><label
+            class="p_debit-label four col" for="p_debit">.NET</label>
+          <input type="radio" name="radio2" id="p_paypal" value="DataBase" formControlName="careerpath"><label
+            class="p_paypal-label four col" for="p_paypal">DataBase</label>
+        </section>
 
       </div>
       <div class="form-row-last">
