--- a/OutliersAPP.SPA/src/app/jobs/job-list/job-list.component.html
+++ b/OutliersAPP.SPA/src/app/jobs/job-list/job-list.component.html
@@ -6,24 +6,24 @@
       <input type="text" placeholder="Search.." name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
-    
+
     <div  class="row">
       <!-- <div class="col-md-8">
 
-      </div> -->
-    
-      
+      </div> style="position: fixed;
+    width: 20%;"-->
+
+
   <div class="col-md-3 col-sm-4 mb margi" >
     <div class="grey-panel pn setting"   >
       <div class="grey-header" id="po">
-        <h5>Playlist recommendations</h5>
+        <h5 >Playlist recommendations</h5>
       </div>
       <br>
       <br>
       <br>
       <br>
       <app-playlist-recomndations-list></app-playlist-recomndations-list>
-      
     </div>
     <div class="grey-panel pn setting2"  >
       <div class="grey-header" id="po"  >
@@ -71,7 +71,7 @@
           </div>
           </div>
         </div>
-        
+
       </div>
   </section>
 </section>
