--- a/OutliersAPP.SPA/src/app/playlist/playlist-recomndations-list/playlist-recomndations-list.component.html
+++ b/OutliersAPP.SPA/src/app/playlist/playlist-recomndations-list/playlist-recomndations-list.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div style="width: 300px;">
   <div *ngFor="let playlist of playlists">
     <app-playlist-recomndations-card [playlist]='playlist'></app-playlist-recomndations-card>
   </div>
