--- a/OutliersAPP.SPA/src/app/jobs/job-recomndations-card/job-recomndations-card.component.html
+++ b/OutliersAPP.SPA/src/app/jobs/job-recomndations-card/job-recomndations-card.component.html
@@ -29,7 +29,7 @@
     <h4>{{job.JobTitle}}</h4>
     <div class="stat">
       <i class="fas fa-pencil-alt"></i>
-      <span style="cursor: pointer; outline: none;" [routerLink]="['/jobs/',job.id]">{{job.JobType}}</span>
+      <span style="cursor: pointer; outline: none;" [routerLink]="['/jobs/',job.Id]">{{job.JobType}}</span>
       <span>{{job.Id}}</span>
     </div>
 
